--- a/ecommerce-order-service/gradle.properties
+++ b/ecommerce-order-service/gradle.properties
@@ -1,4 +1,4 @@
 group=com.ecommerce
-#apiArtifact=ecommerce-order-service-api
-#sdkArtifact=ecommerce-order-service-sdk
+apiArtifact=ecommerce-order-service-api
+sdkArtifact=ecommerce-order-service-sdk
 version=0.1-SNAPSHOT
